--- a/justcos.yml
+++ b/justcos.yml
@@ -5,6 +5,7 @@ init:
   - linuxkit/init:e24105ebb339e1a2e578fde7ec8bccf844a633d5
   - linuxkit/runc:1dc6559fd0a9a332c740312637af0c3fbe6bafa3
   - linuxkit/containerd:ed0589d53e29890b0e504f594a0e4af7326b6484
+  - justcos/bubblewrap:a441c89c8b8f6b8ae4ddee8804198999ce61bf51
   - linuxkit/ca-certificates:v0.6
 onboot:
   - name: sysctl
@@ -17,5 +18,17 @@ services:
     image: linuxkit/getty:v0.6
     env:
      - INSECURE=true
+    binds:
+     - /etc/resolv.conf:/etc/resolv.conf
+     - /run:/run
+     - /tmp:/tmp
+     - /etc:/hostroot/etc
+     - /usr/bin/ctr:/usr/bin/ctr
+     - /usr/bin/runc:/usr/bin/runc
+     - /usr/bin/bwrap:/usr/bin/bwrap
+     - /containers:/containers
+     - /var/log:/var/log
+     - /dev:/dev
+     - /sys:/sys
   - name: rngd
     image: linuxkit/rngd:v0.6
