--- a/justcos.yml
+++ b/justcos.yml
@@ -1,6 +1,6 @@
 kernel:
-  image: linuxkit/kernel:4.14.74
-  cmdline: "console=tty0 console=ttyS0 console=ttyAMA0"
+  image: justcos/kernel:4.14.76-13e16ce87533d60aeaa82cc99a97cd616981bfe8
+  cmdline: "console=tty0 console=ttyS0 console=ttyAMA0 slub_debug=P page_poison=1 slab_nomerge pti=on"
 init:
   - linuxkit/init:e24105ebb339e1a2e578fde7ec8bccf844a633d5
   - linuxkit/runc:1dc6559fd0a9a332c740312637af0c3fbe6bafa3
